--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,3 @@
-
 #user  nobody;
 worker_processes  1;
 
@@ -13,11 +12,9 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
 
     sendfile        on;
     #tcp_nopush     on;
@@ -27,9 +24,9 @@ http {
 
     #gzip  on;
   	upstream zuul_cluster { 
-  		#ƒ¨»œ¬÷—Ø∑Ω Ω
-			server 127.0.0.1:8080 ;
-			server 127.0.0.1:8081 ; 
+  		#ÈªòËÆ§ËΩÆËØ¢ÊñπÂºè
+		server 127.0.0.1:8080 ;
+		server 127.0.0.1:8081 ;
     }
 
     server {
@@ -37,11 +34,10 @@ http {
         server_name  127.0.0.1;
 
         location / {
-		 			proxy_pass http://zuul_cluster;
-		 			proxy_set_header   Host $host;
-		 			proxy_set_header        X-Forwarded-For $remote_addr;
-					proxy_redirect  off; 
-
+		 	proxy_pass http://zuul_cluster;
+		 	proxy_set_header   Host $host;
+		 	proxy_set_header        X-Forwarded-For $remote_addr;
+			proxy_redirect  off;
         }
     }
 }
