--- a/sc-netflit-feign/pom.xml
+++ b/sc-netflit-feign/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>com</groupId>
 			<artifactId>sc-api</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<!--r项目api-->
 
@@ -70,6 +70,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
 		<!-- Start: log4j2 -->
