--- a/sc-service-provider-two/src/main/resources/application.yml
+++ b/sc-service-provider-two/src/main/resources/application.yml
@@ -53,3 +53,19 @@ eureka:
     service-url:
        defaultZone: http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 
+#服务过期时间配置,超过这个时间没有接收到心跳EurekaServer就会将这个实例剔除
+#注意，EurekaServer一定要设置eureka.server.eviction-interval-timer-in-ms否则这个配置无效，这个配置一般为服务刷新时间配置的三倍
+#默认90s
+eureka:
+  instance:
+    lease-expiration-duration-in-seconds: 30
+#服务刷新时间配置，每隔这个时间会主动心跳一次
+#默认30s
+eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 15
+#eureka client刷新本地缓存时间
+#默认30s
+eureka:
+  client:
+    registryFetchIntervalSeconds: 15
