--- a/sc-netflit-zuul-two/src/main/resources/application.yml
+++ b/sc-netflit-zuul-two/src/main/resources/application.yml
@@ -37,6 +37,7 @@ zuul:
   routes:
     api-a:
       stripPrefix: false
+      sensitiveHeaders: Authorization
       path: /demo/**
       serviceid: sc-feign
 
