--- a/sc-service-provider-two/src/main/resources/application.yml
+++ b/sc-service-provider-two/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 9001
+  tomcat:
+    accept-count: 1000
+    max-threads: 1000
+    max-connections: 2000
 
 spring:
   application:
