--- a/sc-netflit-eureka/pom.xml
+++ b/sc-netflit-eureka/pom.xml
@@ -23,6 +23,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Finchley.RC1</spring-cloud.version>
+		<maven.test.skip>true</maven.test.skip>
+		<skipTests>true</skipTests><!--package时跳过 tests-->
 	</properties>
 
 	<dependencies>
